[gd_scene load_steps=6 format=2]

[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://ProyectilConCurva.gd" type="Script" id=2]
[ext_resource path="res://Enemigos/Nivel3/LanzaMomia.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 0.5
height = 1.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 0.5

[node name="ProyectilConCurva" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 2.35619
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
collision_layer = 1
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
rotation = 1.5708
shape = SubResource( 2 )
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]

[editable path="Hitbox"]
